Spacing fix

--- a/static/css/tune_detail_modal.css
+++ b/static/css/tune_detail_modal.css
@@ -88,16 +88,13 @@
 }
 
 .modal-header-title-cell {
-    width: 270px;
-    max-width: 270px;
+    width: 300px;
 }
 
 .modal-header-spacer-cell {
-    width: auto;
     text-align: center;
-    padding: 0 10px;
+    padding: 0;
     padding-top: 10px;
-    white-space: nowrap;
 }
 
 .modal-header-spacer-cell .thesession-link-icon {
@@ -784,7 +781,7 @@
     }
 
     .modal-header-title-cell {
-        width: 50%;
+        width: 300px;
     }
 }
 
